--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-jest": "^22.5.1",
     "eslint-watch": "^5.1.2",
