--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "standard": "^12.0.1"
   },
   "dependencies": {
-    "@cullylarson/f": "0.0.17",
+    "@cullylarson/f": "^0.1.2",
     "@cullylarson/p": "0.0.4",
     "date-fns": "^1.30.1",
     "whatwg-url": "^7.0.0"
