--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@cullylarson/f": "^0.1.2",
     "@cullylarson/p": "0.0.4",
     "date-fns": "^1.30.1",
+    "fast-deep-equal": "^2.0.1",
     "whatwg-url": "^7.0.0"
   }
 }
